        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 14321
Description: lustre_mgs: operation 101 on unconnected MGS
Details    : When MGC is disconnected from MGS long enough, MGS will evict the
             MGC, and late on MGC cannot successfully connect to MGS and a lot
	     of the error messages complaining that MGS is not connected.

Severity   : major
Frequency  : on start mds
Bugzilla   : 14884
Description: Implement get_info(last_id) in obdfilter.

Severity   : normal
Frequency  : occasional
Bugzilla   : 13537
Description: Correctly check stale fid, not start epoch if ost not support SOM
Details    : open with flag O_CREATE need set old fid in op_fid3 because op_fid2
	     overwrited with new generated fid, but mds can anwer with one of these
	     two fids and both is not stale. setattr incorectly start epoch and
	     assume will be called done_writeting, but without SOM done_writing
	     never called.

Severity   : major
Frequency  : rare, depends on device drivers and load
Bugzilla   : 14529
Description: MDS or OSS nodes crash due to stack overflow
Details    : Code changes in 1.8.0 increased the stack usage of some functions.
	     In some cases, in conjunction with device drivers that use a lot
	     of stack the MDS (or possibly OSS) service threads could overflow
	     the stack.  One change which was identified to consume additional
	     stack has been reworked to avoid the extra stack usage.

Severity   : normal
Frequency  : occasional
Bugzilla   : 13730
Description: Do not fail import if osc_interpret_create gets -EAGAIN
Details    : If osc_interpret_create got -EAGAIN it immediately exits and